Ajout de la partie localisation sur la section Head-Hero

--- a/index.html
+++ b/index.html
@@ -7,11 +7,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./public/css/style.css" />
     <title>Ohmyfood</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <h1>ohmyfood</h1>
+    </header>
+    <!-- Hero Section -->
+    <section>
+      <div class="location container">
+        <i class="fa-solid fa-location-dot location__icon"></i>
+        <p class="location__name">Paris, Belleville</p>
+      </div>
+    </section>
+  </body>
 </html>
