Implémentation complète de la partie Header-Hero

--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
     </header>
     <!-- Hero Section -->
     <section>
-      <div class="location container">
+      <div class="location">
         <i class="fa-solid fa-location-dot location__icon"></i>
         <p class="location__name">Paris, Belleville</p>
+      </div>
+      <div class="hero">
+        <h2 class="hero__title">Réserver le menu qui vous convient</h2>
+        <p class="hero__description">
+          Découvrez des restaurants d'exception, séléctionnés par nos soins.
+        </p>
+        <button class="hero__btn">Explorer nos restaurants</button>
       </div>
     </section>
   </body>
