Ajout de la partie fonctionnement

--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
         <button class="hero__btn">Explorer nos restaurants</button>
       </div>
     </section>
+    <!-- Main -->
+    <main class="main">
+      <div class="fonctionnement container">
+        <h2 class="fonctionnement__title">Fonctionnement</h1>
+        <div class="step">
+          <div class="step__box">
+            <span class="step__bubble">1</span>
+            <i class="step__icon fa-solid fa-mobile-screen"></i>
+            <p class="step__description">Choisissez un restaurant</p>
+          </div>
+          <div class="step__box">
+            <span class="step__bubble">2</span>
+            <i class="step__icon fa-solid fa-list"></i>
+            <p class="step__description">Composez votre menu</p>
+          </div>
+          <div class="step__box step__box--selected">
+            <span class="step__bubble">3</span>
+            <i class="step__icon step__icon--selected fa-solid fa-store"></i>
+            <p class="step__description">Dégustez au restaurant</p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
