--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
           </div>
         </div>
       </div>
+      <div class="restaurant container">
+        <h2 class="restaurant__title">Restaurants</h2>
+        <div class="restaurant__box">
+          <span class="restaurant__status">Nouveau</span>
+          <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__img" alt="La Palette du Goût">
+          <div class="restaurant__text__box">
+            <h3 class="restaurant__name">La Palette du Goût</h3>
+            <i class="restaurant__icon fa-regular fa-heart"></i>
+          </div>
+          <p class="restaurant__description">Ménilmontant</p>
+        </div>
+        <div class="restaurant__box">
+          <span class="restaurant__status">Nouveau</span>
+          <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__img" alt="La Note Enchantée">
+          <div class="restaurant__text__box">
+            <h3 class="restaurant__name">La Note Enchantée</h3>
+            <i class="restaurant__icon fa-regular fa-heart"></i>
+          </div>
+          <p class="restaurant__description">Charonne</p>
+        </div>
+        <div class="restaurant__box">
+          <span class="restaurant__status">Nouveau</span>
+          <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__img" alt="À la Française">
+          <div class="restaurant__text__box">
+            <h3 class="restaurant__name">À la Française</h3>
+            <i class="restaurant__icon fa-regular fa-heart"></i>
+          </div>
+          <p class="restaurant__description">Cité rouge</p>
+        </div>
+        <div class="restaurant__box">
+          <span class="restaurant__status">Nouveau</span>
+          <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__img" alt="Le Délice des sens">
+          <div class="restaurant__text__box">
+            <h3 class="restaurant__name">Le Délice des sens</h3>
+            <i class="restaurant__icon fa-regular fa-heart"></i>
+          </div>
+          <p class="restaurant__description">Folie-Méricourt</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
