--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <p class="restaurant__description">Ménilmontant</p>
         </div>
         <div class="restaurant__box">
-          <span class="restaurant__status">Nouveau</span>
+          <span class="restaurant__status restaurant__status--bis">Nouveau</span>
           <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__img" alt="La Note Enchantée">
           <div class="restaurant__text__box">
             <h3 class="restaurant__name">La Note Enchantée</h3>
@@ -82,7 +82,6 @@
           <p class="restaurant__description">Charonne</p>
         </div>
         <div class="restaurant__box">
-          <span class="restaurant__status">Nouveau</span>
           <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__img" alt="À la Française">
           <div class="restaurant__text__box">
             <h3 class="restaurant__name">À la Française</h3>
@@ -91,7 +90,6 @@
           <p class="restaurant__description">Cité rouge</p>
         </div>
         <div class="restaurant__box">
-          <span class="restaurant__status">Nouveau</span>
           <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__img" alt="Le Délice des sens">
           <div class="restaurant__text__box">
             <h3 class="restaurant__name">Le Délice des sens</h3>
@@ -101,5 +99,20 @@
         </div>
       </div>
     </main>
+    <footer class="footer container">
+      <h4 class="footer__title">ohmyfood</h4>
+      <div class="footer__box">
+        <div class="footer__box__container">
+          <i class="footer__box__container__icon fa-solid fa-utensils fa-fw"></i>
+          <p class="footer__box__container__text">Proposer un restaurant</p>
+        </div>
+        <div class="footer__box__container">
+          <i class="footer__box__container__icon fa-solid fa-handshake-angle fa-fw"></i>
+          <p class="footer__box__container__text">Devenir partenaire</p>
+        </div>
+        <p class="footer__box__text">Mentions légales</p>
+        <p class="footer__box__text">Contact</p>
+      </div>
+    </footer>
   </body>
 </html>
