--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Main -->
     <main class="main">
       <div class="fonctionnement container">
-        <h2 class="fonctionnement__title">Fonctionnement</h1>
+        <h2 class="fonctionnement__title">Fonctionnement</h2>
         <div class="step">
           <div class="step__box">
             <span class="step__bubble">1</span>
@@ -64,38 +64,64 @@
       <div class="restaurant container">
         <h2 class="restaurant__title">Restaurants</h2>
         <div class="restaurant__box">
-          <span class="restaurant__status">Nouveau</span>
-          <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant__img" alt="La Palette du Goût">
-          <div class="restaurant__text__box">
-            <h3 class="restaurant__name">La Palette du Goût</h3>
-            <i class="restaurant__icon fa-regular fa-heart"></i>
-          </div>
-          <p class="restaurant__description">Ménilmontant</p>
+          <a href="#">
+            <span class="restaurant__status">Nouveau</span>
+            <img
+              src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              class="restaurant__img"
+              alt="La Palette du Goût"
+            />
+            <div class="restaurant__text__box">
+              <h3 class="restaurant__name">La Palette du Goût</h3>
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+            </div>
+            <p class="restaurant__description">Ménilmontant</p>
+          </a>
         </div>
         <div class="restaurant__box">
-          <span class="restaurant__status restaurant__status--bis">Nouveau</span>
-          <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" class="restaurant__img" alt="La Note Enchantée">
-          <div class="restaurant__text__box">
-            <h3 class="restaurant__name">La Note Enchantée</h3>
-            <i class="restaurant__icon fa-regular fa-heart"></i>
-          </div>
-          <p class="restaurant__description">Charonne</p>
+          <a href="#">
+            <span class="restaurant__status restaurant__status--bis"
+              >Nouveau</span
+            >
+            <img
+              src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              class="restaurant__img"
+              alt="La Note Enchantée"
+            />
+            <div class="restaurant__text__box">
+              <h3 class="restaurant__name">La Note Enchantée</h3>
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+            </div>
+            <p class="restaurant__description">Charonne</p>
+          </a>
         </div>
         <div class="restaurant__box">
-          <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant__img" alt="À la Française">
-          <div class="restaurant__text__box">
-            <h3 class="restaurant__name">À la Française</h3>
-            <i class="restaurant__icon fa-regular fa-heart"></i>
-          </div>
-          <p class="restaurant__description">Cité rouge</p>
+          <a href="#">
+            <img
+              src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              class="restaurant__img"
+              alt="À la Française"
+            />
+            <div class="restaurant__text__box">
+              <h3 class="restaurant__name">À la Française</h3>
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+            </div>
+            <p class="restaurant__description">Cité rouge</p>
+          </a>
         </div>
         <div class="restaurant__box">
-          <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant__img" alt="Le Délice des sens">
-          <div class="restaurant__text__box">
-            <h3 class="restaurant__name">Le Délice des sens</h3>
-            <i class="restaurant__icon fa-regular fa-heart"></i>
-          </div>
-          <p class="restaurant__description">Folie-Méricourt</p>
+          <a href="#">
+            <img
+              src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              class="restaurant__img"
+              alt="Le Délice des sens"
+            />
+            <div class="restaurant__text__box">
+              <h3 class="restaurant__name">Le Délice des sens</h3>
+              <i class="restaurant__icon fa-regular fa-heart"></i>
+            </div>
+            <p class="restaurant__description">Folie-Méricourt</p>
+          </a>
         </div>
       </div>
     </main>
@@ -103,11 +129,15 @@
       <h4 class="footer__title">ohmyfood</h4>
       <div class="footer__box">
         <div class="footer__box__container">
-          <i class="footer__box__container__icon fa-solid fa-utensils fa-fw"></i>
+          <i
+            class="footer__box__container__icon fa-solid fa-utensils fa-fw"
+          ></i>
           <p class="footer__box__container__text">Proposer un restaurant</p>
         </div>
         <div class="footer__box__container">
-          <i class="footer__box__container__icon fa-solid fa-handshake-angle fa-fw"></i>
+          <i
+            class="footer__box__container__icon fa-solid fa-handshake-angle fa-fw"
+          ></i>
           <p class="footer__box__container__text">Devenir partenaire</p>
         </div>
         <p class="footer__box__text">Mentions légales</p>
