--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <div class="restaurant container">
         <h2 class="restaurant__title">Restaurants</h2>
         <div class="restaurant__box">
-          <a href="#">
-            <span class="restaurant__status">Nouveau</span>
+          <a href="#" class="restaurant__box__link">
             <img
               src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               class="restaurant__img"
               alt="La Palette du Goût"
             />
+            <span class="restaurant__status">Nouveau</span>
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">La Palette du Goût</h3>
               <i class="restaurant__icon fa-regular fa-heart"></i>
@@ -79,10 +79,8 @@
           </a>
         </div>
         <div class="restaurant__box">
-          <a href="#">
-            <span class="restaurant__status restaurant__status--bis"
-              >Nouveau</span
-            >
+          <a href="#" class="restaurant__box__link">
+            <span class="restaurant__status">Nouveau</span>
             <img
               src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
               class="restaurant__img"
