--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <title>Ohmyfood</title>
   </head>
   <body>
+    <!-- Spinner -->
+    <div class="loader">
+      <div class="loader__spinner"></div>
+    </div>
     <!-- Header -->
     <header class="header">
       <h1>ohmyfood</h1>
