--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="restaurant__box">
           <a href="#" class="restaurant__box__link">
             <img
-              src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               class="restaurant__img"
               alt="La Palette du Goût"
             />
@@ -86,7 +86,7 @@
           <a href="#" class="restaurant__box__link">
             <span class="restaurant__status">Nouveau</span>
             <img
-              src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+              src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
               class="restaurant__img"
               alt="La Note Enchantée"
             />
@@ -100,7 +100,7 @@
         <div class="restaurant__box">
           <a href="#">
             <img
-              src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               class="restaurant__img"
               alt="À la Française"
             />
@@ -114,7 +114,7 @@
         <div class="restaurant__box">
           <a href="#">
             <img
-              src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               class="restaurant__img"
               alt="Le Délice des sens"
             />
