Ajout de l'animation like

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <i class="step__icon fa-solid fa-list"></i>
             <p class="step__description">Composez votre menu</p>
           </div>
-          <div class="step__box step__box--selected">
+          <div class="step__box">
             <span class="step__bubble">3</span>
-            <i class="step__icon step__icon--selected fa-solid fa-store"></i>
+            <i class="step__icon fa-solid fa-store"></i>
             <p class="step__description">Dégustez au restaurant</p>
           </div>
         </div>
@@ -77,7 +77,12 @@
             <span class="restaurant__status">Nouveau</span>
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">La Palette du Goût</h3>
-              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <div class="restaurant__icon__box">
+                <i class="restaurant__icon fa-regular fa-heart"></i>
+                <i
+                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+                ></i>
+              </div>
             </div>
             <p class="restaurant__description">Ménilmontant</p>
           </a>
@@ -92,7 +97,12 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">La Note Enchantée</h3>
-              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <div class="restaurant__icon__box">
+                <i class="restaurant__icon fa-regular fa-heart"></i>
+                <i
+                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+                ></i>
+              </div>
             </div>
             <p class="restaurant__description">Charonne</p>
           </a>
@@ -106,7 +116,12 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">À la Française</h3>
-              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <div class="restaurant__icon__box">
+                <i class="restaurant__icon fa-regular fa-heart"></i>
+                <i
+                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+                ></i>
+              </div>
             </div>
             <p class="restaurant__description">Cité rouge</p>
           </a>
@@ -120,7 +135,12 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">Le Délice des sens</h3>
-              <i class="restaurant__icon fa-regular fa-heart"></i>
+              <div class="restaurant__icon__box">
+                <i class="restaurant__icon fa-regular fa-heart"></i>
+                <i
+                  class="restaurant__icon restaurant__icon--full fa-solid fa-heart"
+                ></i>
+              </div>
             </div>
             <p class="restaurant__description">Folie-Méricourt</p>
           </a>
