--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="restaurant container">
         <h2 class="restaurant__title">Restaurants</h2>
         <div class="restaurant__box">
-          <a href="#" class="restaurant__box__link">
+          <a href="la_palette_du_gout.html" class="restaurant__box__link">
             <img
               src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               class="restaurant__img"
@@ -77,6 +77,7 @@
             <span class="restaurant__status">Nouveau</span>
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">La Palette du Goût</h3>
+            </a>
               <div class="restaurant__icon__box">
                 <i class="restaurant__icon fa-regular fa-heart"></i>
                 <i
@@ -85,10 +86,9 @@
               </div>
             </div>
             <p class="restaurant__description">Ménilmontant</p>
-          </a>
         </div>
         <div class="restaurant__box">
-          <a href="#" class="restaurant__box__link">
+          <a href="la_note_enchantee.html" class="restaurant__box__link">
             <span class="restaurant__status">Nouveau</span>
             <img
               src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -97,6 +97,7 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">La Note Enchantée</h3>
+            </a>
               <div class="restaurant__icon__box">
                 <i class="restaurant__icon fa-regular fa-heart"></i>
                 <i
@@ -105,10 +106,9 @@
               </div>
             </div>
             <p class="restaurant__description">Charonne</p>
-          </a>
         </div>
         <div class="restaurant__box">
-          <a href="#">
+          <a href="a_la_francaise.html">
             <img
               src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               class="restaurant__img"
@@ -116,6 +116,7 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">À la Française</h3>
+            </a>
               <div class="restaurant__icon__box">
                 <i class="restaurant__icon fa-regular fa-heart"></i>
                 <i
@@ -124,10 +125,10 @@
               </div>
             </div>
             <p class="restaurant__description">Cité rouge</p>
-          </a>
+
         </div>
         <div class="restaurant__box">
-          <a href="#">
+          <a href="le_delice_des_sens.html">
             <img
               src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               class="restaurant__img"
@@ -135,6 +136,7 @@
             />
             <div class="restaurant__text__box">
               <h3 class="restaurant__name">Le Délice des sens</h3>
+            </a>
               <div class="restaurant__icon__box">
                 <i class="restaurant__icon fa-regular fa-heart"></i>
                 <i
@@ -143,10 +145,10 @@
               </div>
             </div>
             <p class="restaurant__description">Folie-Méricourt</p>
-          </a>
         </div>
       </div>
     </main>
+    <!-- Footer -->
     <footer class="footer container">
       <h4 class="footer__title">ohmyfood</h4>
       <div class="footer__box">
