Ajout de l'animation d'apparition des menus

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -85,7 +85,7 @@
             </p>
             <div class="list__plats__cards__box">
               <p class="list__plats__cards__box__description">
-                Mariné aux zesConfiture de figue et pain toasté tes d'orange
+                Confiture de figue et pain toasté tes d'orange
               </p>
               <p class="list__plats__cards__box__prix">35€</p>
             </div>
@@ -174,7 +174,9 @@
             <p class="footer__box__container__text">Devenir partenaire</p>
           </div>
           <p class="footer__box__text">Mentions légales</p>
-          <p class="footer__box__text">Contact</p>
+          <a href="mailto:contact@ohmyfood.com"
+            ><p class="footer__box__text">Contact</p></a
+          >
         </div>
       </footer>
     </main>
