--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -157,7 +157,9 @@
             <p class="footer__box__container__text">Devenir partenaire</p>
           </div>
           <p class="footer__box__text">Mentions légales</p>
-          <p class="footer__box__text">Contact</p>
+          <a href="mailto:contact@ohmyfood.com"
+            ><p class="footer__box__text">Contact</p></a
+          >
         </div>
       </footer>
     </main>
