--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <p class="footer__box__container__text">Devenir partenaire</p>
         </div>
         <p class="footer__box__text">Mentions légales</p>
-        <p class="footer__box__text">Contact</p>
+        <a href="mailto:contact@ohmyfood.com"><p class="footer__box__text">Contact</p></a>
       </div>
     </footer>
   </body>
